@@ -2,7 +2,8 @@
 * editor: Fixed OGRE image loading (related classes are: editor::Texture and editor::BlpCodec).
 * blp: Fixed type usage for data streams.
 * blp: Fixed MIP map header data writing.
-* blp: Improved writing support.
+* blp: Improved performance of reading and writing.
+* blp: Fixed palette writing.
 
 2011-08-20 Tamino Dauth <tamino@cdauth.eu>
 * Added Warcraft III related MIME files.
